--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -12,7 +12,10 @@ If it can't find any content, it shows an h1 saying no content.
 
 @if (MediaList.Count == 0)
 {
-	<h1>Upload some items to get started</h1>
+	<div id="noItemsDiv">
+		<a style="color: rgb(2, 97, 255)" href="/upload">Upload</a>
+		<h1>some items to get started</h1>
+	</div>
 	return;
 }
 
