Revert "Text that is shown when no items in library now has an <a> to /upload"
This reverts commit 95890f5290ee8f0217121abe3c0bc2a99758837b.

--- a/PSS/PSS/Shared/LibraryContentViewer.razor
+++ b/PSS/PSS/Shared/LibraryContentViewer.razor
@@ -12,10 +12,7 @@ If it can't find any content, it shows an h1 saying no content.
 
 @if (MediaList.Count == 0)
 {
-	<div id="noItemsDiv">
-		<a style="color: rgb(2, 97, 255)" href="/upload">Upload</a>
-		<h1>some items to get started</h1>
-	</div>
+	<h1>Upload some items to get started</h1>
 	return;
 }
 
