--- a/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
+++ b/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
@@ -1,19 +1,11 @@
-#noItemsDiv { /* Shown when no items are in user's PSS library. */
-    display: flex;
-    align-content: center;
-    align-items: center;
-    justify-content: center;
+h1 {
     position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
-    user-select: none;
     width: 100%;
-}
-
-#noItemsDiv > * {
-    font-size: 40px;
-    margin-right: 10px;
+    text-align: center;
+    user-select: none;
 }
 
 #libContentViewer {
