AlbumSelector now has a background to prevent clicking other stuff behind it

--- a/PSS/PSS/Shared/AlbumSelector.razor
+++ b/PSS/PSS/Shared/AlbumSelector.razor
@@ -1,50 +1,52 @@
 @* Reusable component that allows user to choose album(s) to add selected items to *@
 <link href="/css/components/AlbumSelector.css" rel="stylesheet">
 
-<div id="albumSelector" style="visibility: @AlbumsVis">
+<div id="albumSelectorBackground" style="visibility: @AlbumsVis">
+    <div id="albumSelector">
 
-    <div id="header">
-        <span>Add to</span>
-        @if (ShowCheckCancelButtons)
-        {
-            <div id="buttons">
-                <button class="iconBtn" @onclick="CloseBtnClick"><span class="material-icons-outlined">close</span></button>
-                <button class="iconBtn" @onclick="ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
-            </div>
-        }
-    </div>
-    
-    <div id="albumCreatorDiv"><AlbumCreator Albums="@(albums.Concat(folders).ToList())"/></div>
-
-    <div class="albumsAndFolders">
-        <span>Albums</span>
-        <div class="albumsList">
-            @for (int i = 0; i < albums.Count; i++)
+        <div id="header">
+            <span>Add to</span>
+            @if (ShowCheckCancelButtons)
             {
-                int ii = i;
-                <div @onclick="@(() => { checkedAlbums[ii] = !checkedAlbums[ii]; ClearFolderChecks(); checkedFolderIndex = -1; })" class="album">
-                    <div class="coverDiv">
-                        @if (albums[i].albumCover != ""){<img src="@S.LIB_REQUEST_PATH/@albums[i].albumCover" alt="">}
-                    </div>
-                    <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput">
-                    <span title="@albums[i].name">@albums[i].name</span>
+                <div id="buttons">
+                    <button class="iconBtn" @onclick="CloseBtnClick"><span class="material-icons-outlined">close</span></button>
+                    <button class="iconBtn" @onclick="ConfirmBtnClick"><span class="material-icons-outlined">check</span></button>
                 </div>
             }
         </div>
-    
-        <span>Folders</span>
-        <div class="albumsList">
-            @for (int i = 0; i < folders.Count; i++)
-            {
-                int ii = i;
-                <div class="album" @onclick="@(() => { checkedFolderIndex = ii; ClearAlbumChecks(); ClearFolderChecks(); checkedFolders[ii] = true; })">
-                    <div class="coverDiv">
-                        @if (folders[i].albumCover != ""){<img src="@S.LIB_REQUEST_PATH/@folders[i].albumCover" alt="">}
+        
+        <div id="albumCreatorDiv"><AlbumCreator Albums="@(albums.Concat(folders).ToList())"/></div>
+
+        <div class="albumsAndFolders">
+            <span>Albums</span>
+            <div class="albumsList">
+                @for (int i = 0; i < albums.Count; i++)
+                {
+                    int ii = i;
+                    <div @onclick="@(() => { checkedAlbums[ii] = !checkedAlbums[ii]; ClearFolderChecks(); checkedFolderIndex = -1; })" class="album">
+                        <div class="coverDiv">
+                            @if (albums[i].albumCover != ""){<img src="@S.LIB_REQUEST_PATH/@albums[i].albumCover" alt="">}
+                        </div>
+                        <input type="checkbox" @bind="@checkedAlbums[ii]" @bind:event="oninput">
+                        <span title="@albums[i].name">@albums[i].name</span>
                     </div>
-                    <input type="checkbox" @bind="@checkedFolders[ii]" @bind:event="oninput">
-                    <span title="@folders[i].name">@folders[i].name</span>
-                </div>
-            }
+                }
+            </div>
+        
+            <span>Folders</span>
+            <div class="albumsList">
+                @for (int i = 0; i < folders.Count; i++)
+                {
+                    int ii = i;
+                    <div class="album" @onclick="@(() => { checkedFolderIndex = ii; ClearAlbumChecks(); ClearFolderChecks(); checkedFolders[ii] = true; })">
+                        <div class="coverDiv">
+                            @if (folders[i].albumCover != ""){<img src="@S.LIB_REQUEST_PATH/@folders[i].albumCover" alt="">}
+                        </div>
+                        <input type="checkbox" @bind="@checkedFolders[ii]" @bind:event="oninput">
+                        <span title="@folders[i].name">@folders[i].name</span>
+                    </div>
+                }
+            </div>
         </div>
     </div>
 </div>
