Put 2 variable declarations on 1 line

--- a/PSS/PSS/Pages/Index.razor
+++ b/PSS/PSS/Pages/Index.razor
@@ -29,8 +29,7 @@
     private static LibraryContentViewer libContentViewer = new();
     private static int selectedItemsCount;
     
-    private static string headerVis;
-    private static string albumsVis;
+    private static string headerVis, albumsVis;
 
     protected override void OnInitialized()
     {
